# firmware

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  PROTOCOL.md  README.md  cspell.json  partitions.csv  platform.code-workspace  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
.claude/skills/mutation-testing/: SKILL.md
.claude/skills/testing/: SKILL.md
include/: ActisenseEncoder.h  AisEncoder.h  AisN2kTo0183Converter.h  AisSimulatorRole.h  AnalogInputService.h  BluetoothService.h  BoatSimulator.h  CurrentSensorManager.h  CurrentSensorService.h  DeviceInfo.h  EnvironmentalSensorService.h  Esp32Platform.h  FileSystem.h  FluidLevelSensorRole.h  I2cBusService.h  LittleFSAdapter.h  LogStream.h  NMEA2000Service.h  Platform.h  Role.h  RoleConfigFactory.h  RoleFactory.h  RoleManager.h  SerialSensorService.h  TcpServer.h  VeDirectBatteryRole.h  VeDirectParser.h  WeatherStationRole.h  WifiGateway0183Role.h  WifiGatewayRole.h  WifiService.h  all.h  board_config.h  types.h
src/: ActisenseEncoder.cpp  AisEncoder.cpp  AisN2kTo0183Converter.cpp  AisSimulatorRole.cpp  AnalogInputService.cpp  BluetoothService.cpp  BoatSimulator.cpp  CMakeLists.txt  CurrentSensorManager.cpp  CurrentSensorService.cpp  DeviceInfo.cpp  EnvironmentalSensorService.cpp  Esp32Platform.cpp  FluidLevelSensorRole.cpp  I2cBusService.cpp  LogStream.cpp  Nmea2000Service.cpp  Role.cpp  RoleConfigFactory.cpp  RoleFactory.cpp  RoleManager.cpp  SerialSensorService.cpp  TcpServer.cpp  VeDirectBatteryRole.cpp  VeDirectParser.cpp  WeatherStationRole.cpp  WifiGateway0183Role.cpp  WifiGatewayConfig.cpp  WifiGatewayRole.cpp  WifiService.cpp  idf_component.yml  main.cpp
test/: MockCurrentSensorManager.h  MockEnvironmentalSensorService.h  MockFileSystem.h  MockI2cBus.h  MockPlatform.h  MockSerialSensorService.h  main.cpp  test_ais_encoder.h  test_ais_n2k_to_0183_converter.h  test_ais_simulator_role.h  test_boat_simulator.h  test_current_sensor_service.h  test_device_info.h  test_environmental_sensor_service.h  test_fluid_level_sensor_role.h  test_role_manager.h  test_tcp_server.h  test_ve_direct_battery_role.h  test_weather_station_role.h  test_wifi_gateway_0183_role.h  test_wifi_gateway_role.h
