idf_component_register(
    SRCS
        "main.cpp"
        "AnalogInputService.cpp"
        "BluetoothService.cpp"
        "DeviceInfo.cpp"
        "Esp32Platform.cpp"
        "FluidLevelSensorRole.cpp"
        "Nmea2000Service.cpp"
        "RoleFactory.cpp"
        "RoleManager.cpp"
        "WifiService.cpp"
        "WifiGatewayConfig.cpp"
        "WifiGatewayRole.cpp"
    INCLUDE_DIRS
        "../include"
    REQUIRES
        nvs_flash
        esp_timer
        esp_wifi
        esp_netif
        driver
        littlefs
        esp-nimble-cpp
        arduinojson
        NMEA2000
        NMEA2000_twai
    )
