idf_component_register(
    SRCS
        "main.cpp"
        "I2cBusService.cpp"
        "CurrentSensorService.cpp"
        "CurrentSensorManager.cpp"
        "EnvironmentalSensorService.cpp"
        "SerialSensorService.cpp"
        "BluetoothService.cpp"
        "DeviceInfo.cpp"
        "Esp32Platform.cpp"
        "FluidLevelSensorRole.cpp"
        "Nmea2000Service.cpp"
        "RoleFactory.cpp"
        "RoleManager.cpp"
        "WifiService.cpp"
        "TcpServer.cpp"
        "WifiGatewayRole.cpp"
        "WifiGateway0183Role.cpp"
        "ActisenseEncoder.cpp"
        "AisN2kTo0183Converter.cpp"
        "AisEncoder.cpp"
        "BoatSimulator.cpp"
        "AisSimulatorRole.cpp"
    INCLUDE_DIRS
        "../include"
    REQUIRES
        nvs_flash
        esp_timer
        esp_wifi
        esp_netif
        driver
        littlefs
        esp-nimble-cpp
        arduinojson
        NMEA2000
        NMEA2000_twai
    )
